# LLM2Fx

./: .gitignore  README.md  pyproject.toml
llm2fx-tools/: README.md  pyproject.toml  train.py
llm2fx-tools/llm4mp/common_utils/: activation_checkpointing.py  special_tokens.py
llm2fx-tools/llm4mp/common_utils/audio_utils/: __init__.py  audio_io.py  dsp_feature.py  trim.py
llm2fx-tools/llm4mp/common_utils/fx_utils/: __init__.py  utils.py
llm2fx-tools/llm4mp/common_utils/fx_utils/dasp_utils/: __init__.py  augment.py  custom_modules.py  dasp_functional.py  dasp_modules.py  tool_calling_fn.py
llm2fx-tools/llm4mp/common_utils/fx_utils/ndsp_utils/: __init__.py  constants.py  pb_functional.py  tool_calling_fn.py
llm2fx-tools/llm4mp/common_utils/tool_utils/: __init__.py  parser.py
llm2fx-tools/llm4mp/models/llm/: model_setup.py  trainer.py
llm2fx-tools/llm4mp/models/llm/data/: pl_modules.py  pt_dataset.py
llm2fx-tools/llm4mp/models/regression/: trainer.py
llm2fx-tools/llm4mp/models/regression/data/: pl_modules.py  pt_dataset.py
llm2fx-tools/llm4mp/modules/audio_encoder/: __init__.py  fx_encoder.py  fx_encoder_pp.py  stito_encoder.py
llm2fx-tools/llm4mp/modules/ntloss/: core.py
llm2fx-tools/llm4mp/preprocessing/audio_processor/: apply_fx.py
llm2fx-tools/llm4mp/preprocessing/fx_processor/: constants.py  fx_sampling_dasp.py  fx_sampling_ndsp.py
llm2fx-tools/llm4mp/preprocessing/llm_processor/: data_generation.py  llm_as_a_judge.py
llm2fx-tools/llm4mp/preprocessing/medley_db_processor/: linear_mixing.py  raw_db.py  rms_mixing.py  silence_remove.py
(+41 files in other folders)
