[project]
name = "llm4mp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bm25s>=0.2.7.post1",
    "datasets>=3.2.0",
    "einops>=0.8.0",
    "fast-pytorch-kmeans>=0.2.2",
    "ffmpeg>=1.4",
    "torch",
    "torchaudio",
    "torchvision",
    "lightning",
    "numpy>=2.2.2",
    "omegaconf>=2.3.0",
    "pandas>=2.2.3",
    "safetensors>=0.5.2",
    "scipy>=1.15.1",
    "soundfile==0.12.1",
    "tqdm>=4.67.1",
    "transformers",
    "wandb>=0.19.4",
    "librosa",
    "tensorboard",
    "pyloudnorm",
    "numba-cuda",
    "numba>=0.61.2",
    "auraloss",
    "julius",
    "torchcomp",
    "sentencepiece",
    "pedalboard>=0.9.17",
    "dasp-pytorch>=0.0.1",
    "matplotlib>=3.10.6",
    "seaborn>=0.13.2",
    "genai>=2.1.0",
    "ntloss>=0.1.2",
    "pydantic>=1.10.13",
]

[tool.setuptools]
packages = ["llm4mp"]
